-- BEGIN Added by all-cabal-hashes-tool
x-package-hashes:
    MD5:6a33599773677f6d7ae4eaf24cbaad9f
    SHA1:dfec03b58097302c37e5dfbe99a1ddea196c56cb
    SHA256:3511ffb63d69cafeed3405fed0937e36c655289034e4e596d617f9b6c5c00072
    SHA512:e5b49f487f79d52331170fbc012c43c351a27a7f9565271f0534a11844b08fbad525b66f288479979a585889f84a8e8992b567d93aea7ab96d7781a707e4eb44
    Skein512_512:6063e6e136ce50c93e472435fe722d10028d7e7e7f5a04727f567fc5c1b3151612eab3dea1077d262cf7ff9cbad33fe1079d57018f55838cb7bbf172273c1989

x-package-locations:
    https://hackage.haskell.org/package/AC-Colour-1.1.4/AC-Colour-1.1.4.tar.gz
    https://s3.amazonaws.com/hackage.fpcomplete.com/package/AC-Colour-1.1.4.tar.gz

x-package-size: 6537
-- END Added by all-cabal-hashes-tool

Cabal-Version: >= 1.6
Name:          AC-Colour
Version:       1.1.4
Stability:     Experimental
Synopsis:      Efficient RGB colour types.

Description:

  This Haskell library is a basic RGB colour types, with
  both @Double@ and @Word8@ channel types. It implements
  efficient conversions between the two (GHC-specific),
  and general arithmetic over colours.
  .
  Changes:
  .
  * Added sRGB support.
  .
  * Minor documentation improvements.

Category:      Data, Math, Numerical, Graphics
License:       BSD3
License-file:  License.txt
Author:        Andrew Coppin
Maintainer:    MathematicalOrchid@hotmail.com
Build-Type:    Simple
Tested-With:   GHC == 7.0.2

Library
  Exposed-modules:
    Data.Colour.Double
    Data.Colour.Map
    Data.Colour.Word8
    Data.Colour.Nonlinear
    Data.Colour.FastFloor
    Data.Colour
  Build-Depends:   base >= 4 && < 5, ghc-prim >= 0.1.0.0 && < 0.3
  HS-Source-Dirs:  .
