Cabal-Version: >= 1.6
Name:          AC-Colour
Version:       1.1.5
Stability:     Experimental
Synopsis:      Efficient RGB colour types.

Description:

  This Haskell library is a basic RGB colour types, with
  both @Double@ and @Word8@ channel types. It implements
  efficient conversions between the two (GHC-specific),
  and general arithmetic over colours.

Category:      Data, Math, Numerical, Graphics
License:       BSD3
License-file:  License.txt
Author:        Andrew Coppin
Maintainer:    MathematicalOrchid@hotmail.com
Build-Type:    Simple
Tested-With:   GHC == 7.0.2

Library
  Exposed-modules:
    Data.Colour.Double
    Data.Colour.Map
    Data.Colour.Word8
    Data.Colour.Nonlinear
    Data.Colour
  Build-Depends:   base >= 4 && < 5
  HS-Source-Dirs:  .


package-hashes:
    MD5:e388af5cfb89c4a69657e829443190d3
    SHA1:3df1842a7f57933c56125b51f3816745c0304c3e
    SHA256:fea64ca8a47305e32e1d09da45bee53277d714d5857a57eefb717ab9cdbe2aa3
    SHA512:ce0da72e52dbdd60df53505123702ea693f41143e3280d6541c12f575b910dde71e0453be9bb95b282501925c00f24fe00323cbd5868049048fcd0cc38b2c2ae
    Skein512_512:d0157d569e70780f15d199d282d325ec5f152f7f9adbf000f761ecdbec89f838178c5839adf4338f92b5609e7861ee083049ec97380642bf8f5f2a0a1cf7f6ec

package-locations:
    https://hackage.haskell.org/package/AC-Colour-1.1.5/AC-Colour-1.1.5.tar.gz
    https://s3.amazonaws.com/hackage.fpcomplete.com/package/AC-Colour-1.1.5.tar.gz

