-- BEGIN Added by all-cabal-hashes-tool
package-hashes:
    MD5:b48f24d129caaf9a46b1d55efae8f220
    SHA1:82e7fdbf0a6b2965928a4beb6937fb311c5e71d4
    SHA256:29fc7c00b8817e31d44c9cec82f103b7c1a3c09caeaf89281bce72e86e58630b
    SHA512:1ada1d3510ccd9a7b2c4a32e6e7a008e510252dfd481d322e465296da8930b999fedbd7bc14fe8c1c1a9aaefdaf8f19a788ddf40d65eeaf3f3eaceb1d4d91280
    Skein512_512:faf5b70385bdc548a20376430e3a6bfe97c57b81868f1804ff2298928df3eb231e6f12db59374ab7a21dfa5ffde6c4a23ced41c5e0561e5c39508548afee2bbd

package-locations:
    https://hackage.haskell.org/package/AC-Colour-1.1.6/AC-Colour-1.1.6.tar.gz
    https://s3.amazonaws.com/hackage.fpcomplete.com/package/AC-Colour-1.1.6.tar.gz

package-size: 6152
-- END Added by all-cabal-hashes-tool

Cabal-Version: >= 1.6
Name:          AC-Colour
Version:       1.1.6
Stability:     Experimental
Synopsis:      Efficient RGB colour types.

Description:

  This Haskell library is a basic RGB colour types, with
  both @Double@ and @Word8@ channel types. It implements
  efficient conversions between the two,
  and general arithmetic over colours.

Category:      Data, Math, Numerical, Graphics
License:       BSD3
License-file:  License.txt
Author:        Andrew Coppin
Maintainer:    MathematicalOrchid@hotmail.com
Build-Type:    Simple
Tested-With:   GHC == 7.4.2

Extra-Source-Files: ChangeLog.markdown

Library
  Exposed-modules:
    Data.Colour.Double
    Data.Colour.Map
    Data.Colour.Word8
    Data.Colour.Nonlinear
    Data.Colour
  Build-Depends:   base >= 4 && < 5
  HS-Source-Dirs:  .
