-- BEGIN Added by all-cabal-hashes-tool
package-hashes:
    MD5:95592f5295190d8514d11a1cad3f0bea
    SHA1:329299752f25f87ec609edc5433f3f6e9b86c063
    SHA256:069b440808ee1e962f8f7763c3c62288ed952f8ea20c8ddfa01465f50d5b5d3d
    SHA512:3c97708b1299eb3525045cbc02e75b1dbda2e9ed132d39cf09c13b578a56f18584ace4de8266bb2a0497f6c9d86f7bc55c101a6f8dbfd95d799e06ff487ca073
    Skein512_512:4717ee17321cee334a82929ebcacd10f0e3b5868fa12cc10e962ba5eb73cfc1d3f9231434c3a7625bbb13efcfff4dbe1287c6f4a0583316d160200d2e359c856

package-locations:
    https://hackage.haskell.org/package/AC-EasyRaster-GTK-1.1.1/AC-EasyRaster-GTK-1.1.1.tar.gz
    https://s3.amazonaws.com/hackage.fpcomplete.com/package/AC-EasyRaster-GTK-1.1.1.tar.gz

package-size: 5207
-- END Added by all-cabal-hashes-tool

Cabal-Version: >= 1.6
Name:          AC-EasyRaster-GTK
Version:       1.1.1
Stability:     Experimental
Synopsis:      GTK+ pixel plotting.

Description:

  This package is a thin layer over Gtk2hs providing an easy
  interface for people who want to do bitmapped graphics.
  Cairo already provides easy access to /vector/ graphics;
  this package is directed at /bitmap/ graphics (i.e.,
  reading and writing individual pixels). This is useful for
  applications such as fractal generators, ray tracers, etc.

Category:      Graphics
License:       BSD3
License-file:  Licence.txt
Author:        Andrew Coppin
Maintainer:    Andrew Coppin <MathematicalOrchid@hotmail.com>
Build-Type:    Simple
Tested-With:   GHC == 6.10.3

Library
  Exposed-modules: Graphics.EasyRaster.GTK, Graphics.EasyRaster.GTK.Paranoid
  Build-Depends:   base >= 4 && < 5, array >= 0.2.0.0 && < 0.3, gtk >= 0.10 && < 0.11
  HS-Source-Dirs:  .
