Cabal-Version: >= 1.6
Name:          AC-EasyRaster-GTK
Version:       1.1.2
Stability:     Experimental
Synopsis:      GTK+ pixel plotting.

Description:

  This package is a thin layer over Gtk2hs providing an easy
  interface for people who want to do bitmapped graphics.
  Cairo already provides easy access to /vector/ graphics;
  this package is directed at /bitmap/ graphics (i.e.,
  reading and writing individual pixels). This is useful for
  applications such as fractal generators, ray tracers, etc.

  Changes:

  * Improved documentation (added sections and example code).

  * Should work with GHC 6.12.1 (not that Gtk2hs does yet!)

Category:      Graphics
License:       BSD3
License-file:  License.txt
Author:        Andrew Coppin
Maintainer:    Andrew Coppin <MathematicalOrchid@hotmail.com>
Build-Type:    Simple
Tested-With:   GHC == 6.10.3

Library
  Exposed-modules: Graphics.EasyRaster.GTK, Graphics.EasyRaster.GTK.Paranoid
  Build-Depends:   base >= 4 && < 5, array >= 0.2.0.0 && < 0.4, gtk >= 0.10 && < 0.11
  HS-Source-Dirs:  .


package-hashes:
    MD5:67d317c8eb552f87691b6d3cc34e8608
    SHA1:022ad66eeaebcf3e992a969d1bf220af43eab316
    SHA256:fa21f11e56fd54fe117b7be193624169048fdd91097557c216834bb2f3fbc3d2
    SHA512:79511621badb49fdc328b6bee490ca4f2159f60131b76e49bb4711bb42aed015a9d299018b0ec8afd6fd2a276b4efbdac0bc9e5a56428dd46344e5cf0f0e377a
    Skein512_512:11a9c476f0186392e89daeea0dad36aff5fb8dc6c6cdb1bdac72e5c8697f1c4232e2840e17ae60252ed22503626692a07318cbeacd983c47fb50ee15ddef759b

package-locations:
    https://hackage.haskell.org/package/AC-EasyRaster-GTK-1.1.2/AC-EasyRaster-GTK-1.1.2.tar.gz
    https://s3.amazonaws.com/hackage.fpcomplete.com/package/AC-EasyRaster-GTK-1.1.2.tar.gz

package-size: 5696
