Cabal-Version: >= 1.6
Name:          AC-EasyRaster-GTK
Version:       1.1.3
Stability:     Experimental
Synopsis:      GTK+ pixel plotting.

Description:

  This package is a thin layer over Gtk2hs providing an easy
  interface for people who want to do bitmapped graphics.
  .
  Cairo already provides easy access to /vector/ graphics;
  this package is directed at /bitmap/ graphics (i.e.,
  reading and writing individual pixels). This is useful for
  applications such as fractal generators, ray tracers, etc.
  .
  Changes:
  .
  * Should work with Gtk2hs 0.11.x now.
  .
  * Fix minor documentation glitches.

Category:      Graphics
License:       BSD3
License-file:  License.txt
Author:        Andrew Coppin
Maintainer:    Andrew Coppin <MathematicalOrchid@hotmail.com>
Build-Type:    Simple
Tested-With:   GHC == 6.10.3

Library
  Exposed-modules: Graphics.EasyRaster.GTK, Graphics.EasyRaster.GTK.Paranoid
  Build-Depends:   base >= 4 && < 5, array >= 0.2, gtk >= 0.10
  HS-Source-Dirs:  .


package-hashes:
    MD5:b212828c7c5f15d4600499f14c2eec93
    SHA1:bc53b5fbdf78ca7bfc3aae4742b69b710a2291a6
    SHA256:2b118ef6f9c9caeacee662131affac969430c2c5e48213acf2718901cca15120
    SHA512:e3ba5b1b26347bbd299e23d9eeeb3ba0c52ad68486095fe32c12314c1c053ac4e47c970ccfd5b704129639276ad81b3d4d00786892af25a8358ed70b1c086c7c
    Skein512_512:24c5c1879404f66011a77454cf40aa1454b1e7600b687a38c3953dbf350fb3b5229ddf484393f43418d3e53c8ba0d6a61fb20fe43b151936d8a94f5339329ecd

package-locations:
    https://hackage.haskell.org/package/AC-EasyRaster-GTK-1.1.3/AC-EasyRaster-GTK-1.1.3.tar.gz
    https://s3.amazonaws.com/hackage.fpcomplete.com/package/AC-EasyRaster-GTK-1.1.3.tar.gz

package-size: 5766
