Cabal-Version: >= 1.6
Name:          AC-EasyRaster-GTK
Version:       1.1.3
Stability:     Experimental
Synopsis:      GTK+ pixel plotting.

Description:

  This package is a thin layer over Gtk2hs providing an easy
  interface for people who want to do bitmapped graphics.
  .
  Cairo already provides easy access to /vector/ graphics;
  this package is directed at /bitmap/ graphics (i.e.,
  reading and writing individual pixels). This is useful for
  applications such as fractal generators, ray tracers, etc.
  .
  Changes:
  .
  * Should work with Gtk2hs 0.11.x now.
  .
  * Fix minor documentation glitches.

Category:      Graphics
License:       BSD3
License-file:  License.txt
Author:        Andrew Coppin
Maintainer:    Andrew Coppin <MathematicalOrchid@hotmail.com>
Build-Type:    Simple
Tested-With:   GHC == 6.10.3

Library
  Exposed-modules: Graphics.EasyRaster.GTK, Graphics.EasyRaster.GTK.Paranoid
  Build-Depends:   base >= 4 && < 5, array >= 0.2, gtk >= 0.10
  HS-Source-Dirs:  .
