Cabal-Version: >= 1.6
Name:          AC-HalfInteger
Version:       1.1.1
Stability:     Experimental
Synopsis:      Efficient half-integer type.

Description:

  This Haskell library is a simple implementation of
  /half-integers/. That is, it provides a type that can
  represent both normal integers and integers plus a half.

Category:      Data, Math, Numerical
License:       BSD3
License-file:  Licence.txt
Author:        Andrew Coppin
Maintainer:    MathematicalOrchid@hotmail.com
Build-Type:    Simple
Tested-With:   GHC == 6.10.3

Library
  Exposed-modules: Data.HalfInteger
  Build-Depends:   base >= 4 && < 5
  HS-Source-Dirs:  .


package-hashes:
    MD5:499a59cc068eda648ccbc5b474024985
    SHA1:235a530bec4d619acf36a434927a3954eda3c14b
    SHA256:0227fe9ee8fbc8750eb4b5c37aa3b1eea30cbfb00ce25399d88c98215338fabf
    SHA512:10c5cd004d22afbbfeb8a2a49d173ad19af7b1f9e58da27a1c41e9b7bfe7e5f4eebc9668577db5c5f76f0fb461ef5646456499acfd362ac98e75e008d8aafc77
    Skein512_512:802184706b11e57de970e709f319d022c1f1d14f6344a79f2c8cc772ef32e2898483bfd4b6ace5cd68600c3a1ab589896e80860516635638b164bf989cc0e6ae

package-locations:
    https://hackage.haskell.org/package/AC-HalfInteger-1.1.1/AC-HalfInteger-1.1.1.tar.gz
    https://s3.amazonaws.com/hackage.fpcomplete.com/package/AC-HalfInteger-1.1.1.tar.gz

