-- BEGIN Added by all-cabal-hashes-tool
package-hashes:
    MD5:8c0b3cad178c51d292fd273e26e8013f
    SHA1:372d5ccec614c2b9d435880952d3e5c53a7aa766
    SHA256:6bb5eefb6a58a3d09ba19889c2fb48d3df3d6215623c2c4480efd766d4599673
    SHA512:ad006e1e6611295ce336cc65ed6c34daa4a556fb7556fdb02d706c6644114b1db8fd66f092fbcab0a9ac5be43ac0b58493d24f5db80a7695370c1314a79579cf
    Skein512_512:cb9e6dc314d5414ffd7092584f3dfdfa6a4dbb462fc3800def517cf2e9932307fb68076c9e75b57187048ee7fdfd52b3a32ce003cf6ef7dae682c5b798dd11fc

package-locations:
    https://hackage.haskell.org/package/AC-HalfInteger-1.2.1/AC-HalfInteger-1.2.1.tar.gz
    https://s3.amazonaws.com/hackage.fpcomplete.com/package/AC-HalfInteger-1.2.1.tar.gz

package-size: 2787
-- END Added by all-cabal-hashes-tool

Cabal-Version: >= 1.6
Name:          AC-HalfInteger
Version:       1.2.1
Stability:     Experimental
Synopsis:      Efficient half-integer type.

Description:

  This Haskell library is a simple implementation of
  /half-integers/. That is, it provides a type that can
  represent both normal integers and integers plus a half.

  Changes:
  * Fixed documentation glitches.
  * Added Integral contexts to some functions.

Category:      Data, Math, Numerical
License:       BSD3
License-file:  Licence.txt
Author:        Andrew Coppin
Maintainer:    Andrew Coppin <MathematicalOrchid@hotmail.com>
Build-Type:    Simple
Tested-With:   GHC == 6.10.3

Library
  Exposed-modules: Data.HalfInteger
  Build-Depends:   base >= 4 && < 5
  HS-Source-Dirs:  .
