-- BEGIN Added by all-cabal-hashes-tool
x-package-hashes:
    MD5:59383c93ac4475f7c4cd5e74706e694c
    SHA1:364b7b4ec4c466276a25598d1579c4903c04e310
    SHA256:fab219b210a6c4e0f99dc157665b4fc9316dba67ceb1ecea93f45a50702a5047
    SHA512:c83640495a5b2175d8a1c0e5f7168b03bcf2d7108f14c0f2add9ecd99f1c5a0bb776f41565c12501e989dcc925c5800b593016c965207698ead4b9bf40e7031c
    Skein512_512:740fbffb24f8bca1fbb949075a627fa1ddabb986ea1731a1b588618665436513b0242fbdd2041d6bf7df126275fa73b86f59e5c74729fef9d8b333ff9f97e285

x-package-locations:
    https://hackage.haskell.org/package/AC-MiniTest-1.1.1/AC-MiniTest-1.1.1.tar.gz
    https://s3.amazonaws.com/hackage.fpcomplete.com/package/AC-MiniTest-1.1.1.tar.gz

x-package-size: 15446
-- END Added by all-cabal-hashes-tool

Cabal-version:       >=1.2
Name:                AC-MiniTest
Version:             1.1.1
Synopsis:            A simple test framework.
Description:

  This is a simple testing library. It focuses mainly on making it
  easy to run large test suites and collect the results together.
  .
  This package is currently fairly experimental. The API may change
  in the near future. Hopefully this release should be relatively
  bug-free, however.
  .
  Changes:
  .
  * Initial release.

License:             BSD3
License-file:        License.txt
Author:              Andrew Coppin
Maintainer:          MathematicalOrchid@hotmail.com
Category:            Testing
Build-type:          Simple

Library
  Exposed-modules:
    Test.AC.Label
    Test.AC.Test
    Test.AC.Class.Eq
    Test.AC.Class.Ord
    Test.AC.Class.Functor
    Test.AC.Class.Monad
  Other-modules:
    Test.AC.Private
  Build-depends:
    base >= 4.2 && < 5,
    transformers >= 0.2
