Cabal-version:       >=1.2
Name:                AC-MiniTest
Version:             1.1.1
x-revision: 1
Synopsis:            A simple test framework.
Description:

  This is a simple testing library. It focuses mainly on making it
  easy to run large test suites and collect the results together.
  .
  This package is currently fairly experimental. The API may change
  in the near future. Hopefully this release should be relatively
  bug-free, however.
  .
  Changes:
  .
  * Initial release.

License:             BSD3
License-file:        License.txt
Author:              Andrew Coppin
Maintainer:          MathematicalOrchid@hotmail.com
Category:            Testing
Build-type:          Simple

Library
  Exposed-modules:
    Test.AC.Label
    Test.AC.Test
    Test.AC.Class.Eq
    Test.AC.Class.Ord
    Test.AC.Class.Functor
    Test.AC.Class.Monad
  Other-modules:
    Test.AC.Private
  Build-depends:
    base >= 4.2 && < 4.8,
    transformers >= 0.2
