-- BEGIN Added by all-cabal-hashes-tool
x-package-hashes:
    MD5:e00e469b741c6b0f80b028b679df1c58
    SHA1:d86fba10a1ed8c166e929dbb0bba4c7a3652a325
    SHA256:783e93443321e5a1a1fcb63ee266bd21b9f2daf0b2bed8e6cfa0746a1dff5c78
    SHA512:c296cb02fa9d70ca1f75bfdda8e307f66c800ac0e7b110bdd4af685c6acc506f3310456519d2445f850263baa22aa317266c68166bfcb551d297296d8c4de5ef
    Skein512_512:157a3699ac7ff27e563214d81cc2fc74cfb933ad382f6545d133e7dd8603850b1f4f8584c2d91846fcad2db369d7ee48670f46180f5dd2794ea20a93f90fb14f

x-package-locations:
    https://hackage.haskell.org/package/AC-PPM-1.1.1/AC-PPM-1.1.1.tar.gz
    https://s3.amazonaws.com/hackage.fpcomplete.com/package/AC-PPM-1.1.1.tar.gz

x-package-size: 2958
-- END Added by all-cabal-hashes-tool

Cabal-Version: >= 1.6
Name:          AC-PPM
Version:       1.1.1
Stability:     Experimental
Synopsis:      Trivial package for writing PPM images.

Description:

  This package is written in 100% Haskell and enables you to
  write PPM (\"Portable Pixel Map\") images in human-readable
  text format as well as the more efficient binary format.
  It uses the ByteString library for maximum efficiency.

  For those that don't know, PPM is an image file format
  which is trivially simple, but therefore horribly inefficient.
  None the less, many programs can read PPM files, so this
  package represents an easy way to write Haskell code that
  generates images, without having to depend on any external
  C code.

Category:      Codec, Graphics
License:       BSD3
License-file:  License.txt
Author:        Andrew Coppin
Maintainer:    Andrew Coppin <MathematicalOrchid@hotmail.com>
Build-Type:    Simple
Tested-With:   GHC == 6.10.3

Library
  Exposed-modules: Codec.PPM, Codec.PPM.Text, Codec.PPM.Binary
  Build-Depends:   base >= 4 && < 5, bytestring >= 0.9  && < 1.0
  HS-Source-Dirs:  .
