Cabal-version:       >=1.6
Name:                AC-Random
Version:             0.1
Synopsis:            A pure Haskell PRNG.
Description:

  This is a psuedo-random number generator (PRNG). It is designed to
  replace the standard Haskell '98 PRNG from the @random@ package. It
  has the following properties:
  .
  * Nicer API than @random@. (Supports all sizes of @Int@ and
    @Word@, for example.)
  .
  * Much faster than @random@. (In my tests, roughly 14x faster.)
  .
  * Comparable quality to @random@. (Both libraries pass the \"Die
    Harder\" suite of statistical randomness tests. In other words,
    neither has any overly obvious pattern to the \"random\" numbers
    it produces. Both libraries pass Die Harder with similar scores.)
  .
  * 100% Haskell '98 code. No compiler-specific features. No
    external dependencies. Builds everywhere.
  .
  * Pure functions and simple ADTs. No mutable state, no @IO@ monad.
    Simple API.
  .
  The actual algorithm is a lag-4 Multiply With Carry (MWC)
  generator, using 32-bit arithmetic. (Should be fast on 32-bit and
  64-bit platforms.) If my algebra is correct, its period should be
  roughly 1.46 * 10^48. (By constrast, @random@ claims to have a
  period of only 2.30 * 10^18.)
  .
  Note that this algorithm, by itself, is /not/ cryptographically
  secure.
  .
  Changes:
  .
  * Initial release.

License:             BSD3
License-file:        License.txt
Author:              Andrew Coppin
Maintainer:          MathematicalOrchid@hotmail.com
Category:            Random
Build-type:          Simple

Library
  Exposed-modules:
    Random.MWC.Primitive
    Random.MWC.Pure
    Random.MWC.Monadic
  Build-depends:
    base == 4.*


package-hashes:
    MD5:74c91b367c8f358a7834f898e9018756
    SHA1:4e5c82abb665bbfea603c3a38df8b489c0f1c27e
    SHA256:8159443b99eae8da13227b7a47fb59b84e860cafec072355d38212063ebb00b0
    SHA512:9982b3bafb073fd6a3a0616864b9fd6a80566163c5eb5ddb0e3f6ecd0449bc379d9e8656d07dc58091a55461dbc64ea528205bb8a283f87b7b1feaa703bc0470
    Skein512_512:9ee923ec0c6c99d61c9d6584da23f91e70ec48ef90b29e1284673a494668c7a6e71d4610003a262d2900ad87f777b415d2e58752645ccecfb1a92144fb9a2742

package-locations:
    https://hackage.haskell.org/package/AC-Random-0.1/AC-Random-0.1.tar.gz
    https://s3.amazonaws.com/hackage.fpcomplete.com/package/AC-Random-0.1.tar.gz

package-size: 4517
