Cabal-Version: >= 1.6
Name:          AC-Terminal
Version:       1.0
Stability:     Stable
Synopsis:      Trivial wrapper over ansi-terminal.

Description:

  This trivial package presents a simplified interface to
  the most excellent @ansi-terminal@ package, exposing only
  the functionallity that I personally use. It is very
  limited, but very easy to use.
  .
  This package allows you to manipulate the text output
  terminal (assuming your program has one). Specifically,
  it supports colour changes and title changes (for
  virtual terminals). Impressively, it (or rather, the
  package it wraps) works on both Windows and Unix.
  Under Windows, it uses native Win32 calls, while under
  Unix it uses ANSI escape codes.

Category:      Data, Math, Numerical
License:       BSD3
License-file:  License.txt
Author:        Andrew Coppin
Maintainer:    MathematicalOrchid@hotmail.com
Build-Type:    Simple
Tested-With:   GHC == 6.10.3

Library
  Exposed-modules:
    System.Terminal.Core
    System.Terminal.Utility
    System.Terminal
  Build-Depends:   base >= 4 && < 5, ansi-terminal >= 0.5
  HS-Source-Dirs:  .


package-hashes:
    MD5:771deda7c818c7c7aaa659dd848ffda8
    SHA1:04a150f8bada26ca677b669784ef3f02df6b2740
    SHA256:83d09dd723aea78934fcf7feb979606e1e8a5053a99fda34142d91781c6e1b34
    SHA512:f8f591b6d53ad7f30e6f9f6a6374304545c128da051cf3c15a6cf1fee02ae7071f943d94b1f771900f7729a366a181d00265e39306ba55c7c3751c58b6213047
    Skein512_512:4562d8c72060c4340a8c4f2eed98a9f4dcce8fa3b11d640c5f15111ad0d5e79ab7b97d04cc8164bd9a237ebdf781a2a09716c789619c63870df67a240a1317b3

package-locations:
    https://hackage.haskell.org/package/AC-Terminal-1.0/AC-Terminal-1.0.tar.gz
    https://s3.amazonaws.com/hackage.fpcomplete.com/package/AC-Terminal-1.0.tar.gz

