-- BEGIN Added by all-cabal-hashes-tool
x-package-hashes:
    MD5:c8d10c03f322d9d0bf5facd9c514ab18
    SHA1:2131fea746a407a6e9ca3c399a1bbdc1371d409e
    SHA256:cf032d47e12b1cfd57de4bd531028b419ec00e7ff769e22e53a1104dbd50ded9
    SHA512:1ce8658c20df49eb47d46cb28512c22e6f14d54e6d03cd90290b1bdbf3598162c872bd7730a99e54995af48e91567b789cc4061fc483eeb0734826e281d35357
    Skein512_512:4e0916f909bc40942c7db049aeeb152f2aa782036b8d4c8963e0b9d15be176d6acbe100e8aebc157534648640560962227932054dab0cc79a135ff02e9a6089b

x-package-locations:
    https://hackage.haskell.org/package/AC-VanillaArray-1.1.1/AC-VanillaArray-1.1.1.tar.gz
    https://s3.amazonaws.com/hackage.fpcomplete.com/package/AC-VanillaArray-1.1.1.tar.gz

x-package-size: 2784
-- END Added by all-cabal-hashes-tool

Cabal-Version: >= 1.6
Name:          AC-VanillaArray
Version:       1.1.1
Stability:     Experimental
Synopsis:      Immutable arrays with plain integer indicies.

Description:

  This package is a thin layer over GHC's low-level array
  primitives. It provides arrays with zero-origin integers
  for indicies. (These arrays also lack bounds checks.)
  They come in two flavours: mutable or immutable. (Both
  are boxed and lazy, however. There are no unboxed arrays
  here.)

  The idea is that you can use this package as a starting
  point for building a more useful array package, without
  having to learn all GHC's low-level internals for yourself.

Category:      Data
License:       BSD3
License-file:  Licence.txt
Author:        Andrew Coppin
Maintainer:    Andrew Coppin <MathematicalOrchid@hotmail.com>
Build-Type:    Simple
Tested-With:   GHC == 6.10.3

Library
  Exposed-modules: Data.Array.Vanilla.Unsafe
  Build-Depends:   base >= 4 && < 5, ghc-prim >= 0.1 && < 0.2
  HS-Source-Dirs:  .
