Cabal-Version: >= 1.6
Name:          AC-VanillaArray
Version:       1.1.2
Stability:     Experimental
Synopsis:      Immutable arrays with plain integer indicies.

Description:

  This package is a thin layer over GHC's low-level array
  primitives. It provides arrays with zero-origin integers
  for indicies. (These arrays also lack bounds checks.)
  They come in two flavours: mutable or immutable. (Both
  are boxed and lazy, however. There are no unboxed arrays
  here.)

  The idea is that you can use this package as a starting
  point for building a more useful array package, without
  having to learn all GHC's low-level internals for yourself.

  Changes:

  * Now builds with GHC 6.12.1

Category:      Data
License:       BSD3
License-file:  License.txt
Author:        Andrew Coppin
Maintainer:    Andrew Coppin <MathematicalOrchid@hotmail.com>
Build-Type:    Simple
Tested-With:   GHC == 6.10.3

Library
  Exposed-modules: Data.Array.Vanilla.Unsafe
  Build-Depends:   base >= 4 && < 5, ghc-prim >= 0.1 && < 0.3
  HS-Source-Dirs:  .


package-hashes:
    MD5:34b2a9a548689b718e3e38f05f532d05
    SHA1:f48c2ea479cd8663ba8883fb9fbb4fe6168c8306
    SHA256:7b4430ab596a5aae4245df83de7682966d8bb1a0e9b931819f398a57188f9310
    SHA512:a38e60c5c07bf95071a97516bc3a6b266803d4ee0230c38e0db691879472f71f38a33212576802878c9b328d6f0f9d73991e30a0df8041d095ffae869f7d0eb8
    Skein512_512:85f0214aae2cf8d8deb7cb0614b3b3c85dd276c4819fa583964e96c6327f820e8ecf34c2ad742b5230da3563c25a64f691e4927f1d40e6c398fedea61478e1f8

package-locations:
    https://hackage.haskell.org/package/AC-VanillaArray-1.1.2/AC-VanillaArray-1.1.2.tar.gz
    https://s3.amazonaws.com/hackage.fpcomplete.com/package/AC-VanillaArray-1.1.2.tar.gz

